Support OES_texture_{half_}float on ES 3.0 without EXT_texture_storage.

Emulate the LUMINANCE, ALPHA and LUMINANCE_ALPHA formats with
GL_RED/GL_RG textures on platforms that don't support the internal
formats provided by EXT_texture_storage.

This change makes WebKit on iOS pass WebGL's
conformance/extensions/oes-texture-{half-}float tests per
https://bugs.webkit.org/show_bug.cgi?id=210524 .

Bug: angleproject:4636
Change-Id: I6c158058e4b170b16ece578a3930c230de16a9ca